--- a/Chessboard/Chessboard.csproj
+++ b/Chessboard/Chessboard.csproj
@@ -33,4 +33,8 @@
     <None Include="wwwroot\Pieces\White\RookW.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
+  </ItemGroup>
+
 </Project>
